# StockBack

./: CMakeLists.txt  Conexao.h  README.md  Recursos.qrc  formeditarfornecedor.cpp  formeditarfornecedor.h  formeditarfornecedor.ui  formeditarfunc.cpp  formeditarfunc.h  formeditarfunc.ui  formeditarproduto.cpp  formeditarproduto.h  formeditarproduto.ui  formeditarprodutovenda.cpp  formeditarprodutovenda.h  formeditarprodutovenda.ui  formgestaoestoque.cpp  formgestaoestoque.h  formgestaoestoque.ui  formgestaofornecedores.cpp  formgestaofornecedores.h  formgestaofornecedores.ui  formgestaofunc.cpp  formgestaofunc.h  formgestaofunc.ui  formgestaovendas.cpp  formgestaovendas.h  formgestaovendas.ui  formlogin.cpp  formlogin.h  formlogin.ui  formnovaaquisicao.cpp  formnovaaquisicao.h  formnovaaquisicao.ui  formnovavenda.cpp  formnovavenda.h  formnovavenda.ui  formpesquisaraquisicao.cpp  formpesquisaraquisicao.h  formpesquisaraquisicao.ui  (+7 more)
bancoDeDados/: StockBack.db
